AC_INIT(src/bip.c)
AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(bip,0.0)
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_YACC
AM_PROG_LEX

CFLAGS=-O2 -g -W -Wall -Werror

debug=false
AC_ARG_ENABLE(debug,
	[  --enable-debug                Turn on debugging],
	[debug=true && CFLAGS="-O0 -g  -W -Wall -Werror"])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

oidentd=false
AC_ARG_ENABLE(oidentd,
	[  --enable-oidentd                Enable oidentd support (bip overwrites ~/.oidentd.conf with this on!)],
AC_DEFINE([HAVE_OIDENTD], [], [Enable oidentd.conf management support])

	)
	#[oidentd=true]
AM_CONDITIONAL(OIDENTD, test x$debug = xtrue)

requires_libssl=yes
AC_ARG_ENABLE(ssl,
	      [  --disable-ssl           Drop OpenSSL support],
	      [requires_libssl=no])
if test "x$requires_libssl" = "xyes" ; then
    AC_CHECK_LIB(ssl, SSL_read, [], [
        echo "Error! You need to have libssl around."
        exit -1
        ])
fi
AC_OUTPUT(Makefile src/Makefile samples/Makefile)
