AC_INIT(src/bip.c)
AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(bip,0.6.0)
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LEX
AC_PROG_YACC

CFLAGS="-O2 -W -Wall"

debug=false
AC_ARG_ENABLE(debug,
	[  --enable-debug                Turn on debugging],
	[debug=true && CFLAGS="-O0 -g  -W -Wall"])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

oidentd=false
AC_ARG_ENABLE(oidentd,
	[  --enable-oidentd                Enable oidentd support (bip overwrites ~/.oidentd.conf with this on!)],
AC_DEFINE([HAVE_OIDENTD], [], [Enable oidentd.conf management support])

	)
	#[oidentd=true]
AM_CONDITIONAL(OIDENTD, test x$debug = xtrue)

requires_libssl="yes"
AC_ARG_ENABLE(ssl,
	      [  --disable-ssl           Drop OpenSSL support],
	      [requires_libssl=no])
if test "x$requires_libssl" = "xyes" ; then
    AC_CHECK_LIB(crypto, CRYPTO_new_ex_data, [],
		 [AC_MSG_ERROR([library 'crypto' is required for OpenSSL support])]) 

    AC_CHECK_LIB(ssl, SSL_read, [], 
		 [AC_MSG_ERROR(
		  [library 'ssl' is required for OpenSSL support])],
		  -lcrypto) 
fi
AC_OUTPUT(Makefile src/Makefile samples/Makefile)
